--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Sweetaste</title>
+  <link href="img/logo-dark.png" type="image/x-icon" rel="shortcut icon">
   <link rel="stylesheet" href="assets/style/all.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
     crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
@@ -18,10 +20,10 @@
         <img src="img/logo-all-dark.png" alt="logo">
       </div>
       <ul>
-        <li><a href="#">首頁</a></li>
-        <li><a href="#">甜點</a></li>
-        <li><a href="#">登入</a></li>
-        <li><a href="#"><img src="img/cart.png" alt="cart"></a></li>
+        <li><a href="index.html">首頁</a></li>
+        <li><a href="product.html">甜點</a></li>
+        <li><a href="login.html">登入</a></li>
+        <li><a href="cart.html"><i class="material-icons">shopping_cart</i></a></li>
       </ul>
     </nav>
   </header>
@@ -114,9 +116,13 @@
           <p>訂閱你我的甜蜜郵件</p>
         </div>
         <div class="email">
-          <div class="icon"><i class="fas fa-envelope"></i></div>
+          <div class="icon">
+            <i class="material-icons">email</i>
+            </div>
           <input type="text" id="email" name="email">
-          <label for="email"><i class="fas fa-arrow-right"></i></label>
+          <label for="email">
+            <i class="material-icons">arrow_forward</i>
+          </label>
         </div>
       </div>
     </div>
