--- a/product.html
+++ b/product.html
@@ -122,11 +122,15 @@
       </div>
       <div class="navigation">
         <ul>
-          <li><i class="fas fa-caret-left"></i></li>
+          <li>
+            <i class="material-icons">navigate_before</i>
+          </li>
           <li class="active">1</li>
           <li>2</li>
           <li>3</li>
-          <li><i class="fas fa-caret-right"></i></li>
+          <li>
+            <i class="material-icons">navigate_next</i>
+          </li>
         </ul>
       </div>
     </div>
