--- a/cart.html
+++ b/cart.html
@@ -9,15 +9,29 @@
   <link href="img/logo-dark.png" type="image/x-icon" rel="shortcut icon">
   <link rel="stylesheet" href="assets/style/all.css">
   <link rel="stylesheet" href="assets/style/cart.css">
+  <link rel="stylesheet" href="assets/style/rwd.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
   <header>
-    <nav>
+    <nav class="pc_menu">
       <div class="logo">
-        <img src="img/logo-all-dark.png" alt="logo">
+        <a href="index.html"><img src="img/logo-all-dark.png" alt="logo"></a>
       </div>
+      <ul>
+        <li><a href="index.html">首頁</a></li>
+        <li><a href="product.html">甜點</a></li>
+        <li><a href="login.html">登入</a></li>
+        <li><a href="cart.html"><i class="material-icons">shopping_cart</i></a></li>
+      </ul>
+    </nav>
+    <nav class="mobile_menu">
+      <div class="hamburger">
+        <span></span>
+      </div>
+      <img src="img/logo-all-dark.png" alt="logo">
+      <a href="cart.html"><i class="material-icons">shopping_cart</i></a>
       <ul>
         <li><a href="index.html">首頁</a></li>
         <li><a href="product.html">甜點</a></li>
@@ -31,7 +45,7 @@
       <div class="title">您的購物車</div>
       <table>
         <tr>
-          <td>
+          <td class="pic">
             <img src="img/item1.jpg" alt="">
           </td>
           <td class="item_title">
@@ -43,15 +57,15 @@
             <input type="number" value="2">
             <span>+</span>
           </td>
-          <td>
+          <td class="total_price">
             <p>NT$900</p>
           </td>
-          <td>
+          <td class="delete">
             <i class="material-icons">delete_outline</i>
           </td>
         </tr>
         <tr>
-          <td>
+          <td class="pic">
             <img src="img/item3.jpg" alt="">
           </td>
           <td class="item_title">
@@ -63,15 +77,15 @@
             <input type="number" value="2">
             <span>+</span>
           </td>
-          <td>
+          <td class="total_price">
             <p>NT$900</p>
           </td>
-          <td>
+          <td class="delete">
             <i class="material-icons">delete_outline</i>
           </td>
         </tr>
         <tr>
-          <td>
+          <td class="pic">
             <img src="img/item2.jpg" alt="">
           </td>
           <td class="item_title">
@@ -83,10 +97,10 @@
             <input type="number" value="2">
             <span>+</span>
           </td>
-          <td>
+          <td class="total_price">
             <p>NT$900</p>
           </td>
-          <td>
+          <td class="delete">
             <i class="material-icons">delete_outline</i>
           </td>
         </tr>
@@ -149,6 +163,8 @@
       </div>
     </div>
   </footer>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
+  <script src="js/all.js"></script>
 </body>
 
 </html>
