--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Sweetaste</title>
   <link href="img/logo-dark.png" type="image/x-icon" rel="shortcut icon">
   <link rel="stylesheet" href="assets/style/all.css">
+  <link rel="stylesheet" href="assets/style/rwd.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
     crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -15,10 +16,23 @@
 
 <body>
   <header>
-    <nav>
+    <nav class="pc_menu">
       <div class="logo">
-        <img src="img/logo-all-dark.png" alt="logo">
+        <a href="index.html"><img src="img/logo-all-dark.png" alt="logo"></a>
       </div>
+      <ul>
+        <li><a href="index.html">首頁</a></li>
+        <li><a href="product.html">甜點</a></li>
+        <li><a href="login.html">登入</a></li>
+        <li><a href="cart.html"><i class="material-icons">shopping_cart</i></a></li>
+      </ul>
+    </nav>
+    <nav class="mobile_menu">
+      <div class="hamburger">
+        <span></span>
+      </div>
+      <img src="img/logo-all-dark.png" alt="logo">
+      <a href="cart.html"><i class="material-icons">shopping_cart</i></a>
       <ul>
         <li><a href="index.html">首頁</a></li>
         <li><a href="product.html">甜點</a></li>
@@ -48,8 +62,9 @@
       </div>
     </div>
   </div>
+  <img src="img/sm-為什麼選擇了做甜點.png" class="mobile_pic" alt="">
   <section>
-    <div class="contain">
+    <div class="contain" id="why_1">
       <div class="pic_1"></div>
       <div class="reason">
         <p>是非成敗轉頭空，滾滾長江東逝水，白髮漁樵江渚上，古今多少事，都付笑談中。</p>
@@ -58,8 +73,9 @@
       </div>
     </div>
   </section>
+  <img src="img/sm-為什麼一定要吃甜點.png" class="mobile_pic" alt="">
   <section>
-    <div class="contain">
+    <div class="contain" id="why_2">
       <div class="reason">
         <p>是非成敗轉頭空，滾滾長江東逝水，白髮漁樵江渚上，古今多少事，都付笑談中。</p>
         <p>青山依舊在，幾度夕陽紅。慣看秋月春風。一壺濁酒喜相逢，浪花淘盡英雄。是非成敗轉頭空，滾滾長江東逝水，白髮漁樵江渚上，古今多少事，都付笑談中。</p>
@@ -81,7 +97,7 @@
         <div class="title">焦糖瑪卡龍</div>
         <div class="price">NT$ 450</div>
       </div>
-      <div class="addcart">加入購物車</div>
+      <a class="addcart" href="cart.html">加入購物車</a>
     </div>
     <div class="item">
       <div class="img_box">
@@ -93,7 +109,7 @@
         <div class="title">焦糖瑪卡龍</div>
         <div class="price">NT$ 450</div>
       </div>
-      <div class="addcart">加入購物車</div>
+      <a class="addcart" href="cart.html">加入購物車</a>
     </div>
     <div class="item">
       <div class="img_box">
@@ -105,7 +121,7 @@
         <div class="title">焦糖瑪卡龍</div>
         <div class="price">NT$ 450</div>
       </div>
-      <div class="addcart">加入購物車</div>
+      <a class="addcart" href="cart.html">加入購物車</a>
     </div>
   </div>
   <footer>
@@ -118,7 +134,7 @@
         <div class="email">
           <div class="icon">
             <i class="material-icons">email</i>
-            </div>
+          </div>
           <input type="text" id="email" name="email">
           <label for="email">
             <i class="material-icons">arrow_forward</i>
@@ -147,6 +163,8 @@
       </div>
     </div>
   </footer>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
+  <script src="js/all.js"></script>
 </body>
 
 </html>
