--- a/login.html
+++ b/login.html
@@ -9,15 +9,29 @@
   <link href="img/logo-dark.png" type="image/x-icon" rel="shortcut icon">
   <link rel="stylesheet" href="assets/style/all.css">
   <link rel="stylesheet" href="assets/style/login.css">
+  <link rel="stylesheet" href="assets/style/rwd.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
   <header>
-    <nav>
+    <nav class="pc_menu">
       <div class="logo">
-        <img src="img/logo-all-dark.png" alt="logo">
+        <a href="index.html"><img src="img/logo-all-dark.png" alt="logo"></a>
       </div>
+      <ul>
+        <li><a href="index.html">首頁</a></li>
+        <li><a href="product.html">甜點</a></li>
+        <li><a href="login.html">登入</a></li>
+        <li><a href="cart.html"><i class="material-icons">shopping_cart</i></a></li>
+      </ul>
+    </nav>
+    <nav class="mobile_menu">
+      <div class="hamburger">
+        <span></span>
+      </div>
+      <img src="img/logo-all-dark.png" alt="logo">
+      <a href="cart.html"><i class="material-icons">shopping_cart</i></a>
       <ul>
         <li><a href="index.html">首頁</a></li>
         <li><a href="product.html">甜點</a></li>
@@ -29,6 +43,11 @@
   <div class="login_area">
     <div class="contain active">
       <h1>會員登入</h1>
+      <div class="mobile_social">
+        <img src="img/facebook.png" alt="">
+        <img src="img/google.png" alt="">
+        <img src="img/yahoo.png" alt="">
+      </div>
       <div class="router">
         <label for="user_id"><i class="material-icons">person</i></label>
         <input type="text" placeholder="電子信箱/手機號碼" id="user_id">
@@ -90,6 +109,8 @@
       </div>
     </div>
   </footer>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
+  <script src="js/all.js"></script>
 </body>
 
 </html>
